--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://dpg-cdpm7h6n6mppiad17vhg-a:5432/sinappsadb
-spring.datasource.username=bager
-spring.datasource.password=mP4qV0NRY33FHt8uSMzLamF4hUQ5RAz8
+spring.datasource.url=connect your db
+spring.datasource.username= user
+spring.datasource.password= pass1
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
@@ -9,12 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ssinapsa@gmail.com
-spring.mail.password=aoccfdzqzbvaaweo
+spring.mail.username= address
+spring.mail.password= pass2
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-#lokalno
-#spring.datasource.url=${DB_DATASOURCE:jdbc:postgresql://localhost:5433/progidb}
-#spring.datasource.username=${DB_USERNAME:postgres}
-#spring.datasource.password=${DB_PASSWORD:bazepodataka}
